--- a/components/BookingForm.module.css
+++ b/components/BookingForm.module.css
@@ -44,6 +44,7 @@
     font-family: inherit;
     font-weight: 200;
     color: var(--the-black);
+    -webkit-appearance: none;
 }
 
 @media (hover:hover) {
