--- a/components/FindPatient.module.css
+++ b/components/FindPatient.module.css
@@ -33,6 +33,7 @@
     font-family: inherit;
     font-weight: 200;
     color: var(--the-black);
+    -webkit-appearance: none;
 }
 
 @media (hover:hover) {
