--- a/components/SelectTime.module.css
+++ b/components/SelectTime.module.css
@@ -67,7 +67,7 @@
 
 .stageButton {
     width: 45%;
-    margin: 20px 0;
+    margin: 20px 0 150px 0;
     padding: 10px 0;
     cursor: pointer;
     border: none;
