--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,3 +67,9 @@ hr {
   height: 1px;
   background-color: white;
 }
+
+@media only screen and (max-width: 600px) {
+  h2 {
+    font-size: 18px;
+  }
+}
