--- a/components/AppointmentType.module.css
+++ b/components/AppointmentType.module.css
@@ -1,16 +1,17 @@
 .appointments {
     width: 70%;
-    max-width: 1024px;
+    max-width: 920px;
     margin: 10px auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    box-sizing: border-box;
 }
 
 .appointmentCard {
-    width: 45%;
-    margin: 0 auto 20px auto;
+    width: 48%;
+    margin: 0 0 20px 0;
     padding: 10px 20px;
     text-align: left;
     background-color: var(--half-white);
@@ -26,12 +27,12 @@
 
 @media only screen and (max-width: 1025px) {
     .appointments {
-        width: 98%;
+        width: 90%;
     }
 }
 
 @media only screen and (max-width: 600px) {
     .appointmentCard {
-        width: 90%;
+        width: 100%;
     }
 }
